[gd_scene load_steps=3 format=3 uid="uid://ow1w02rwdu84"]

[ext_resource type="Script" path="res://main/main.gd" id="1_3b87w"]
[ext_resource type="PackedScene" uid="uid://bqubu18xo2tn7" path="res://stat_field/stat_field.tscn" id="1_nyn8g"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3b87w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameField" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Character Name"

[node name="StatField" parent="VBoxContainer" instance=ExtResource("1_nyn8g")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="OpenButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Open a Character"

[node name="MakeNewButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Create a New Character"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OpenButton" to="." method="_on_open_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MakeNewButton" to="." method="_on_make_new_button_pressed"]
